Details
-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.7.2, Qt Creator 4.8.0-rc1, Qt Creator 4.8.0
-
None
-
-
d1a4e10fbace577ba87888b140a1b236a751483c (qt-creator/qt-creator/4.8)
Description
Qt creator crashed during switching git branches - after approved for update submodules.
I can reproduce it all time while updating submodules needed.
The basic scenario:
- Checkout branch with submodules.
- Change some files from submodule - commit changes. Update submodule in branch;
- Checkout other branch (from Qt Creator) uses the same submodule to force Qt Creator shows you "Do you want to update submodules ? " message box. Answer yes.
Other case:
- two branches uses same submodules but via different commits. Switching branches forces Qt Creator shows you "Do you want to update submodules ? " message box.
- Switch branches throught Qt Creator.
Result - crashed.
Core dump:
Process: Qt Creator [366] Path: /Applications/Qt Creator 2.app/Contents/MacOS/Qt Creator Identifier: org.qt-project.qtcreator Version: 4.7 (4.7.84) Code Type: X86-64 (Native) Parent Process: ??? [1] Responsible: Qt Creator [366] User ID: 502 Date/Time: 2018-11-29 14:03:30.319 +0200 OS Version: Mac OS X 10.13.6 (17G65) Report Version: 12 Bridge OS Version: 3.0 (14Y664) Anonymous UUID: 5410C08E-5416-8311-C5C3-0EF85913C8B0 Time Awake Since Boot: 14000 seconds System Integrity Protection: enabled Crashed Thread: 0 Dispatch queue: com.apple.main-thread Exception Type: EXC_BAD_ACCESS (SIGSEGV) Exception Codes: EXC_I386_GPFLT Exception Note: EXC_CORPSE_NOTIFY Termination Signal: Segmentation fault: 11 Termination Reason: Namespace SIGNAL, Code 0xb Terminating Process: exc handler [0] Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 org.qt-project.QtCore 0x000000010325c867 QEventLoop::exit(int) + 39 1 org.qt-project.QtWidgets 0x0000000102786a9e QDialog::setVisible(bool) + 846 2 org.qt-project.QtWidgets 0x0000000102785953 QDialog::~QDialog() + 35 3 libUtils.4.7.84.dylib 0x000000010234ed72 Utils::fileDeletedPrompt(QString const&, bool, QWidget*) + 1090 4 ??? 0x0000000100000000 0 + 4294967296 Thread 1:: com.apple.CFSocket.private 0 libsystem_kernel.dylib 0x00007fff67a5ccf2 __select + 10 1 com.apple.CoreFoundation 0x00007fff3faf288b __CFSocketManager + 635 2 libsystem_pthread.dylib 0x00007fff67c24661 _pthread_body + 340 3 libsystem_pthread.dylib 0x00007fff67c2450d _pthread_start + 377 4 libsystem_pthread.dylib 0x00007fff67c23bf9 thread_start + 13 Thread 2:: Qt bearer thread 0 libsystem_kernel.dylib 0x00007fff67a5e09a poll + 10 1 org.qt-project.QtCore 0x00000001032b6e3a qt_safe_poll(pollfd*, unsigned int, timespec const*) + 90 2 org.qt-project.QtCore 0x00000001032b8837 QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 903 3 org.qt-project.QtCore 0x000000010325c61f QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 431 4 org.qt-project.QtCore 0x0000000103099c6c QThread::exec() + 140 5 org.qt-project.QtCore 0x000000010309abe3 0x103078000 + 142307 6 libsystem_pthread.dylib 0x00007fff67c24661 _pthread_body + 340 7 libsystem_pthread.dylib 0x00007fff67c2450d _pthread_start + 377 8 libsystem_pthread.dylib 0x00007fff67c23bf9 thread_start + 13 Thread 3:: QThread 0 libsystem_kernel.dylib 0x00007fff67a5e09a poll + 10 1 org.qt-project.QtCore 0x00000001032b7040 qt_safe_poll(pollfd*, unsigned int, timespec const*) + 608 2 org.qt-project.QtCore 0x00000001032b8837 QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 903 3 org.qt-project.QtCore 0x000000010325c61f QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 431 4 org.qt-project.QtCore 0x0000000103099c6c QThread::exec() + 140 5 org.qt-project.QtCore 0x000000010309abe3 0x103078000 + 142307 6 libsystem_pthread.dylib 0x00007fff67c24661 _pthread_body + 340 7 libsystem_pthread.dylib 0x00007fff67c2450d _pthread_start + 377 8 libsystem_pthread.dylib 0x00007fff67c23bf9 thread_start + 13 Thread 4:: QThread 0 libsystem_kernel.dylib 0x00007fff67a5e09a poll + 10 1 org.qt-project.QtCore 0x00000001032b7040 qt_safe_poll(pollfd*, unsigned int, timespec const*) + 608 2 org.qt-project.QtCore 0x00000001032b8837 QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 903 3 org.qt-project.QtCore 0x000000010325c61f QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 431 4 org.qt-project.QtCore 0x0000000103099c6c QThread::exec() + 140 5 org.qt-project.QtCore 0x000000010309abe3 0x103078000 + 142307 6 libsystem_pthread.dylib 0x00007fff67c24661 _pthread_body + 340 7 libsystem_pthread.dylib 0x00007fff67c2450d _pthread_start + 377 8 libsystem_pthread.dylib 0x00007fff67c23bf9 thread_start + 13 Thread 5:: QQmlThread 0 libsystem_kernel.dylib 0x00007fff67a5e09a poll + 10 1 org.qt-project.QtCore 0x00000001032b7040 qt_safe_poll(pollfd*, unsigned int, timespec const*) + 608 2 org.qt-project.QtCore 0x00000001032b8837 QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 903 3 org.qt-project.QtCore 0x000000010325c61f QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 431 4 org.qt-project.QtCore 0x0000000103099c6c QThread::exec() + 140 5 org.qt-project.QtQml 0x0000000103a65a39 0x1037e6000 + 2619961 6 org.qt-project.QtCore 0x000000010309abe3 0x103078000 + 142307 7 libsystem_pthread.dylib 0x00007fff67c24661 _pthread_body + 340 8 libsystem_pthread.dylib 0x00007fff67c2450d _pthread_start + 377 9 libsystem_pthread.dylib 0x00007fff67c23bf9 thread_start + 13 Thread 6:: QQmlThread 0 libsystem_kernel.dylib 0x00007fff67a5e09a poll + 10 1 org.qt-project.QtCore 0x00000001032b7040 qt_safe_poll(pollfd*, unsigned int, timespec const*) + 608 2 org.qt-project.QtCore 0x00000001032b8837 QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 903 3 org.qt-project.QtCore 0x000000010325c61f QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 431 4 org.qt-project.QtCore 0x0000000103099c6c QThread::exec() + 140 5 org.qt-project.QtQml 0x0000000103a65a39 0x1037e6000 + 2619961 6 org.qt-project.QtCore 0x000000010309abe3 0x103078000 + 142307 7 libsystem_pthread.dylib 0x00007fff67c24661 _pthread_body + 340 8 libsystem_pthread.dylib 0x00007fff67c2450d _pthread_start + 377 9 libsystem_pthread.dylib 0x00007fff67c23bf9 thread_start + 13 Thread 7:: com.apple.NSEventThread 0 libsystem_kernel.dylib 0x00007fff67a5320a mach_msg_trap + 10 1 libsystem_kernel.dylib 0x00007fff67a52724 mach_msg + 60 2 com.apple.CoreFoundation 0x00007fff3fab8785 __CFRunLoopServiceMachPort + 341 3 com.apple.CoreFoundation 0x00007fff3fab7ad7 __CFRunLoopRun + 1783 4 com.apple.CoreFoundation 0x00007fff3fab7153 CFRunLoopRunSpecific + 483 5 com.apple.AppKit 0x00007fff3d18ffc4 _NSEventThread + 184 6 libsystem_pthread.dylib 0x00007fff67c24661 _pthread_body + 340 7 libsystem_pthread.dylib 0x00007fff67c2450d _pthread_start + 377 8 libsystem_pthread.dylib 0x00007fff67c23bf9 thread_start + 13 Thread 8: 0 libsystem_kernel.dylib 0x00007fff67a5d28a __workq_kernreturn + 10 1 libsystem_pthread.dylib 0x00007fff67c24009 _pthread_wqthread + 1035 2 libsystem_pthread.dylib 0x00007fff67c23be9 start_wqthread + 13 Thread 9:: Dispatch queue: com.apple.root.user-interactive-qos 0 libsystem_kernel.dylib 0x00007fff67a5320a mach_msg_trap + 10 1 libsystem_kernel.dylib 0x00007fff67a52724 mach_msg + 60 2 com.apple.QuartzCore 0x00007fff4ae3f2ef CA::Render::Fence::wait(unsigned int, unsigned long) + 169 3 com.apple.QuartzCore 0x00007fff4ae27d18 CA::Context::commit_transaction(CA::Transaction*) + 1330 4 com.apple.QuartzCore 0x00007fff4ae274c5 CA::Transaction::commit() + 487 5 com.apple.AppKit 0x00007fff3d177c20 NSPerformVisuallyAtomicChange + 166 6 com.apple.AppKit 0x00007fff3d18487b __42-[NSAnimation(NSInternal) _runInNewThread]_block_invoke + 85 7 libdispatch.dylib 0x00007fff678da5fa _dispatch_call_block_and_release + 12 8 libdispatch.dylib 0x00007fff678d2db8 _dispatch_client_callout + 8 9 libdispatch.dylib 0x00007fff678d4b2c _dispatch_root_queue_drain + 902 10 libdispatch.dylib 0x00007fff678d4755 _dispatch_worker_thread3 + 101 11 libsystem_pthread.dylib 0x00007fff67c24169 _pthread_wqthread + 1387 12 libsystem_pthread.dylib 0x00007fff67c23be9 start_wqthread + 13 Thread 10: 0 libsystem_kernel.dylib 0x00007fff67a5d28a __workq_kernreturn + 10 1 libsystem_pthread.dylib 0x00007fff67c24009 _pthread_wqthread + 1035 2 libsystem_pthread.dylib 0x00007fff67c23be9 start_wqthread + 13 Thread 11:: Thread (pooled) 0 libsystem_kernel.dylib 0x00007fff67a5ca16 __psynch_cvwait + 10 1 libsystem_pthread.dylib 0x00007fff67c25589 _pthread_cond_wait + 732 2 org.qt-project.QtCore 0x00000001030a352f 0x103078000 + 177455 3 org.qt-project.QtCore 0x00000001030a323e 0x103078000 + 176702 4 org.qt-project.QtCore 0x00000001030a317c QWaitCondition::wait(QMutex*, QDeadlineTimer) + 108 5 org.qt-project.QtCore 0x00000001030a30dd QWaitCondition::wait(QMutex*, unsigned long) + 61 6 org.qt-project.QtCore 0x000000010309fd7e 0x103078000 + 163198 7 org.qt-project.QtCore 0x000000010309abe3 0x103078000 + 142307 8 libsystem_pthread.dylib 0x00007fff67c24661 _pthread_body + 340 9 libsystem_pthread.dylib 0x00007fff67c2450d _pthread_start + 377 10 libsystem_pthread.dylib 0x00007fff67c23bf9 thread_start + 13 Thread 12:: Dispatch queue: com.apple.NSXPCConnection.user.endpoint 0 libsystem_kernel.dylib 0x00007fff67a5dc1a kevent_id + 10 1 libdispatch.dylib 0x00007fff678f0a58 _dispatch_kq_poll + 197 2 libdispatch.dylib 0x00007fff678f0742 _dispatch_kq_drain + 119 3 libdispatch.dylib 0x00007fff678f06a6 _dispatch_event_loop_drain + 318 4 libdispatch.dylib 0x00007fff678e72a7 _dispatch_queue_serial_drain + 779 5 libdispatch.dylib 0x00007fff678da166 _dispatch_queue_invoke + 373 6 libdispatch.dylib 0x00007fff678e7f0d _dispatch_root_queue_drain_deferred_wlh + 332 7 libdispatch.dylib 0x00007fff678ebd21 _dispatch_workloop_worker_thread + 880 8 libsystem_pthread.dylib 0x00007fff67c23fd2 _pthread_wqthread + 980 9 libsystem_pthread.dylib 0x00007fff67c23be9 start_wqthread + 13 Thread 0 crashed with X86 Thread State (64-bit): rax: 0x00007fab960ae380 rbx: 0x00007ffeed9577e0 rcx: 0x006f007400610072 rdx: 0x000000010328a8fc rdi: 0x006f007400610072 rsi: 0x0000000000000000 rbp: 0x00007ffeed9577d0 rsp: 0x00007ffeed9577d0 r8: 0x0000000000000805 r9: 0x00007faba4f20800 r10: 0x00007faba2000000 r11: 0xfffffffffffffff8 r12: 0x0000604010c423d0 r13: 0x00007fab96494610 r14: 0x0000604008a5dc70 r15: 0x00007ffeed957870 rip: 0x000000010325c867 rfl: 0x0000000000010206 cr2: 0x000060c00126d4b2 Logical CPU: 0 Error Code: 0x00000000 Trap Number: 13