Core: Use correct parent for fileDeletedPrompt

Fixes: QTCREATORBUG-21607
Change-Id: Ibf1ba7440cd1cbcd746b1be60a6058b86692ca2b
Reviewed-by: Eike Ziller <eike.ziller@qt.io>