src/plugins/coreplugin/documentmanager.cpp
@@ -1196,8 +1196,8 @@ void DocumentManager::checkForReload()
                     if (previousDeletedAnswer != FileDeletedCloseAll) {
                         previousDeletedAnswer =
                                 fileDeletedPrompt(document->filePath().toString(),
-                                                         trigger == IDocument::TriggerExternal,
-                                                         QApplication::activeWindow());
+                                                  trigger == IDocument::TriggerExternal,
+                                                  ICore::dialogParent());
                     }
                     switch (previousDeletedAnswer) {
                     case FileDeletedSave:
